# zamuza

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
addons/vscode/: language-configuration.json  package.json
addons/vscode/syntaxes/: zamuza.iro  zamuza.tmLanguage
examples/: lambda.zz  qsort.zz  simple.zz  unary.zz
src/: ast.rs  check.rs  lib.rs  main.rs  options.rs  parser.rs  runtime.rs  utils.rs  zamuza.pest
src/backend/: builder.rs  mod.rs  optimize.rs
src/frontend/: ast.rs  check.rs  mod.rs  parser.rs  semantic.rs
src/runtime/: builder.rs  ir.rs  mod.rs  vm.rs
tinycc/: Cargo.toml  build.rs
tinycc/src/: bindings.rs  lib.rs
