[package]
name = "zamuza"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Zamuza language compiler."
authors = ["Wybxc <wybxc@qq.com>"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.3", features = ["derive"] }
clio = { version = "0.3.2", features = ["clap-parse"] }
pest = "2.0"
pest_derive = "2.0"
colorized = "1.0"
annotate-snippets = { version = "0.9", features = ["color"] }

[profile.release]
lto = true
